# dotow

./: Cargo.toml  README.md
share/: dotow_migrate
src/: create.rs  error.rs  install.rs  main.rs  migrate.rs  utility.rs
test/dotfiles/: .dotowignore  dotow.json
test/home/: config1  config3
